SERVER-53983: Add failpoint to block collection cache refreshes for controlling unittest behavior.